--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.17",
+    "adm-zip": "^0.5.16",
     "electron-store": "^11.0.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
