--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "crezty-minecraft-launcher",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An Electron application with React",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
+  "build": {
+    "appId": "com.crezty.minecraftlauncher",
+    "productName": "Minecraft Launcher",
+    "asar": true,
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "CreztY",
+        "repo": "Minecraft-Launcher"
+      }
+    ]
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -15,7 +34,8 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "release": "electron-builder --win --publish=always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -25,7 +45,8 @@
     "electron-store": "^11.0.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "electron-updater": "^6.6.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.1.0",
@@ -33,7 +54,6 @@
     "@vitejs/plugin-react": "^5.0.3",
     "electron": "^38.1.2",
     "electron-builder": "^25.1.8",
-    "electron-updater": "^6.6.2",
     "electron-vite": "^4.0.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
