--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "crezty-minecraft-launcher",
-  "version": "1.0.1",
-  "description": "An Electron application with React",
+  "version": "1.0.1.1",
+  "description": "Una aplicación para descargar mods y jugar Minecraft.",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "crezty",
+  "homepage": "https://crezty.com",
   "build": {
     "appId": "com.crezty.minecraftlauncher",
     "productName": "Minecraft Launcher",
