--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crezty-minecraft-launcher",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Una aplicación para descargar mods y jugar Minecraft.",
   "main": "./out/main/index.js",
   "author": "crezty",
@@ -35,7 +35,7 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
-    "release": "electron-builder --win --publish=always"
+    "release": "npm run build:win && electron-builder --win --publish=always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
